--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "expo-asset": "~8.6.1",
     "expo-clipboard": "~3.1.0",
     "expo-constants": "~13.2.4",
+    "expo-device": "~4.3.0",
     "expo-font": "~10.2.1",
     "expo-linking": "~3.2.2",
     "expo-notifications": "~0.16.1",
+    "expo-permissions": "~13.2.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "expo-system-ui": "~1.3.0",
