--- a/app.json
+++ b/app.json
@@ -23,10 +23,10 @@
       "supportsTablet": true
     },
     "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/images/icon.png",
-        "backgroundColor": "#ffffff"
-      },
+      // "adaptiveIcon": {
+      //   // "foregroundImage": "./assets/images/icon.png",
+      //   // "backgroundColor": "#ffffff"
+      // },
       "package": "com.dayfireacad.myapp"
     },
     "web": {
