--- a/app.json
+++ b/app.json
@@ -12,10 +12,10 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "updates": {
-      "fallbackToCacheTimeout": 0,
-      "url": "https://u.expo.dev/8c4ee8e3-af23-4c10-9a31-ab32a8b3e62d"
-    },
+    // "updates": {
+    //   "fallbackToCacheTimeout": 0,
+    //   "url": "https://u.expo.dev/8c4ee8e3-af23-4c10-9a31-ab32a8b3e62d"
+    // },
     "assetBundlePatterns": [
       "**/*"
     ],
@@ -32,11 +32,11 @@
     "web": {
       "favicon": "./assets/images/favicon.png"
     },
-    "extra": {
-      "eas": {
-        "projectId": "8c4ee8e3-af23-4c10-9a31-ab32a8b3e62d"
-      }
-    },
+    // "extra": {
+    //   "eas": {
+    //     "projectId": "8c4ee8e3-af23-4c10-9a31-ab32a8b3e62d"
+    //   }
+    // },
     "runtimeVersion": {
       "policy": "sdkVersion"
     }
