--- a/eas.json
+++ b/eas.json
@@ -4,6 +4,9 @@
   },
   "build": {
     "development": {
+      "android": {
+        "buildType": "apk"
+      },
       "developmentClient": true,
       "distribution": "internal"
     },
