--- a/package.json
+++ b/package.json
@@ -8,10 +8,16 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "test": "jest --watchA2ll"
+    "test": "jest"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "jest-expo",
+    "setupFiles": [
+      "./__mocks__/jestSetupFile.js"
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ]
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
@@ -36,6 +42,8 @@
     "expo-system-ui": "~1.3.0",
     "expo-updates": "~0.14.7",
     "expo-web-browser": "~11.0.0",
+    "jest": "^26.6.3",
+    "jest-expo": "^48.0.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
@@ -48,11 +56,11 @@
     "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.21.8",
+    "@babel/preset-env": "^7.21.5",
     "@types/react": "~18.0.0",
     "@types/react-native": "~0.69.1",
-    "jest": "^26.6.3",
-    "jest-expo": "~44.0.1",
+    "babel-jest": "^29.5.0",
     "react-test-renderer": "18.0.0",
     "typescript": "~4.3.5"
   },
