--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "test": "jest"
   },
   "jest": {
-    "preset": "jest-expo",
-    "setupFiles": [
-      "./__mocks__/jestSetupFile.js"
+    "preset": "react-native",
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
     ],
     "transformIgnorePatterns": [
       "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
-    ]
+    ],
+    "transform": {
+      "\\.[jt]sx?$": "babel-jest"
+    }
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
@@ -42,7 +45,7 @@
     "expo-system-ui": "~1.3.0",
     "expo-updates": "~0.14.7",
     "expo-web-browser": "~11.0.0",
-    "jest": "^26.6.3",
+    "jest": "^29.5.0",
     "jest-expo": "^48.0.2",
     "react": "18.0.0",
     "react-dom": "18.0.0",
@@ -58,9 +61,15 @@
   "devDependencies": {
     "@babel/core": "^7.21.8",
     "@babel/preset-env": "^7.21.5",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/jest-native": "^5.4.2",
+    "@testing-library/react-native": "^12.1.2",
     "@types/react": "~18.0.0",
     "@types/react-native": "~0.69.1",
     "babel-jest": "^29.5.0",
+    "eslint": "^8.41.0",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-react": "^7.32.2",
     "react-test-renderer": "18.0.0",
     "typescript": "~4.3.5"
   },
